--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=172.16.0.21
 DB_PORT=3306
 DB_DATABASE=montimax
-DB_USERNAME=root  
-DB_PASSWORD=
+DB_USERNAME=Luis  
+DB_PASSWORD=luisfelipe
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
